Update Post “2020-11-02-test”

--- a/content/posts/2020-11-02-test.md
+++ b/content/posts/2020-11-02-test.md
@@ -3,6 +3,7 @@ template: SinglePost
 title: test
 status: Published
 date: 2020-11-02
+featuredImage: https://ucarecdn.com/3736a190-54e7-445c-a94d-3993ba7bebcd/
 excerpt: test
 categories:
   - category: 制作実績
