Update Post “2020-11-02-test-1”

--- a/content/posts/2020-11-02-test-1.md
+++ b/content/posts/2020-11-02-test-1.md
@@ -1,6 +1,6 @@
 ---
 template: SinglePost
-title: test
+title: testtadadf
 status: Published
 date: 2020-11-02
 featuredImage: https://ucarecdn.com/f9ba7699-72cc-4462-97b8-fd04365e5af4/-/crop/2072x1768/0,0/-/preview/
